# git-mapper

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: github.py
app/core/: config.py
app/repositories/: github_repository.py
app/schemas/: github.py
app/services/: github_service.py
