[project]
name = "git-mapper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "fastapi>=0.115.8",
    "langchain>=0.3.18",
    "langchain-anthropic>=0.3.7",
    "langchain-community>=0.3.17",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.70",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]
